objects/Application_Feature_Validation__mdt.object
<CustomObject>
    <description>Roles should be added with &quot;;&quot; (i.e. semi colon) separation</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>CIHR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Dealer Account</fullName>
                </value>
                <value>
                    <fullName>Dealer Branch Account</fullName>
                </value>
                <value>
                    <fullName>Distributor Account</fullName>
                </value>
                <value>
                    <fullName>Distributor Branch Account</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Full Service Dealer</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Maintenance Dealer</fullName>
                </value>
                <value>
                    <fullName>National Account</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>SIR</fullName>
                </value>
                <value>
                    <fullName>Votech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Roles__c</fullName>
        <label>Application Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BU Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Application Feature Validation</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>BU_Name__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Application_Roles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Application Feature Validations</pluralLabel>
</CustomObject>